build_err.txt

> spider-verse-bday@0.0.0 build
> tsc -b && vite build

[36mvite v8.0.3 [32mbuilding client environment for production...[36m[39m
[2K
Found 1 warning while optimizing generated CSS:

Γöé   }
Γöé }
Γöé @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap');
Γöå        ^-- @import rules must precede all rules aside from @charset and @layer statements
Γöå
Γöé :root {
Γöé   --text-dark: #0f172a;


%23noise referenced in %23noise didn't resolve at build time, it will remain unchanged to be resolved at runtime
transforming...Γ£ô 2125 modules transformed.
Γ£ù Build failed in 265ms
error during build:
Build failed with 1 error:

[plugin vite:css-post]
SyntaxError: [lightningcss minify] Unexpected token Delim('%')
1  |  /*! tailwindcss v4.2.2 | MIT License | https://tailwindcss.com */
2  |  ...</filter><rect width=\"100%\" height=\"100%\" filter=\"url("%23noise")\" opacity=\"0.5\"/></svg>");mask-image:url(...
   |                                                                 ^
    at Module.<anonymous> (C:\Users\anant\Downloads\bday\spider-verse-bday\node_modules\lightningcss\node\index.js:56:14)
    at minifyCSS (file:///C:/Users/anant/Downloads/bday/spider-verse-bday/node_modules/vite/dist/node/chunks/node.js:21202:59)
    at async finalizeCss (file:///C:/Users/anant/Downloads/bday/spider-verse-bday/node_modules/vite/dist/node/chunks/node.js:21048:36)
    at async Promise.all (index 1)
    at async Object.run (file:///C:/Users/anant/Downloads/bday/spider-verse-bday/node_modules/vite/dist/node/chunks/node.js:2436:22)
    at async PluginContextImpl.renderChunk (file:///C:/Users/anant/Downloads/bday/spider-verse-bday/node_modules/vite/dist/node/chunks/node.js:20587:19)
    at async plugin (file:///C:/Users/anant/Downloads/bday/spider-verse-bday/node_modules/rolldown/dist/shared/bindingify-input-options-e7ze4hPR.mjs:1234:16)
    at async plugin.<computed> (file:///C:/Users/anant/Downloads/bday/spider-verse-bday/node_modules/rolldown/dist/shared/bindingify-input-options-e7ze4hPR.mjs:1593:12)
    at aggregateBindingErrorsIntoJsError (file:///C:/Users/anant/Downloads/bday/spider-verse-bday/node_modules/rolldown/dist/shared/error-BLhcSyeg.mjs:48:18)
    at unwrapBindingResult (file:///C:/Users/anant/Downloads/bday/spider-verse-bday/node_modules/rolldown/dist/shared/error-BLhcSyeg.mjs:18:128)
    at #build (file:///C:/Users/anant/Downloads/bday/spider-verse-bday/node_modules/rolldown/dist/shared/rolldown-build-CPrIX9V6.mjs:3313:34)
    at async buildEnvironment (file:///C:/Users/anant/Downloads/bday/spider-verse-bday/node_modules/vite/dist/node/chunks/node.js:32849:64)
    at async Object.build (file:///C:/Users/anant/Downloads/bday/spider-verse-bday/node_modules/vite/dist/node/chunks/node.js:33271:19)
    at async Object.buildApp (file:///C:/Users/anant/Downloads/bday/spider-verse-bday/node_modules/vite/dist/node/chunks/node.js:33268:153)
    at async CAC.<anonymous> (file:///C:/Users/anant/Downloads/bday/spider-verse-bday/node_modules/vite/dist/node/cli.js:778:3) {
  errors: [Getter/Setter]
}
